2006-01-22  Chris Toshok  <toshok@ximian.com>

	* DesignerSerializationVisibilityAttribute.cs: in the 2.0 case,
	this attribute is valid on fields and events as well.

2005-11-19  Zoltan Varga  <vargaz@gmail.com>

	* TypeDescriptor.cs: Small changes to make this more compliant with
	MSDN docs and actual MS behaviour.

2005-11-07  Pedro Martinez Julia <pedromj@gmail.com>

	* IBindingListView.cs Initial implementation
	* HandledEventArgs.cs Initial implementation
	* HandledEventHandler.cs Initial implementation
	* ListSortDescription.cs: Initial implementation
	* ListSortDescriptionCollection.cs: Initial implementation

2005-10-31  Dick Porter  <dick@ximian.com>

	* Win32Exception.cs: Add another error code.

2005-09-20  Chris Toshok  <toshok@ximian.com>

	* INotifyPropertyChanged.cs: new interface.

2005-09-19  Gert Driesen <drieseng@users.sourceforge.net>

	* TypeDescriptor.cs: Remove usage of removed internal
	PropertyDescriptorCollection ctor. Return read-only collection.
	* PropertyDescriptorCollection.cs: Removed internal ctor taking
	ArrayList. Add ctor for making read-only collection. Added
	read-only checks. Implemented IsReadOnly and IsFixedSize. Empty now
	returns read-only collection to match MS.NET.

2005-09-12  Gert Driesen <drieseng@users.sourceforge.net>

	* TypeConverter.cs: Only return browsable properties in GetProperties.

2005-08-28  Gert Driesen <drieseng@users.sourceforge.net>

	* DateTimeConverter.cs: ConvertTo must return zero-length string
	for DateTime.MinValue. Use CultureInfo.GetFormat to obtain
	DateTimeFormatInfo to match MS.NET.

2005-08-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TypeDescriptor.cs: remove double lock in DefaultConverter.

2005-08-26  Gert Driesen <drieseng@users.sourceforge.net>

	* BaseNumberConverter.cs: Use CultureInfo.GetFormat to obtain
	NumberFormatInfo to match MS.NET. Added ConvertToString abstract 
	method for conversion to string.
	* ByteConverter.cs: Implemented ConvertToString.