@@ -1,3 +1,7 @@
+2006-01-31 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* Container.cs: patch by Brian Crowell that fixes GetService().
+
 2006-01-22  Chris Toshok  <toshok@ximian.com>
 
 	* DesignerSerializationVisibilityAttribute.cs: in the 2.0 case,
